5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1684_1100.log
== TEST (2019-04-29 09:59:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: ")

print("Entrada: " ,cedula,)
2 = Tartaruga
5 = Garca
10 = Arara
20 = Mico-leao-dourado
50 =Onca-pintada
100 = Garoupa

if(2):
	mensagem = Tartaruga
		elif(5):
			mensagem = Garca
			elif(10):
				 mensagem = Arara
				 elif(20):
				 	mensagem = Mico-leao-dourado
				 	elif(50):
				 		mensagem = Onca-pintada
				 		elif(100):
				 			mensagem = Garoupa
				 		else:
				 			mensagem = Invalido
				 
print("animal: " , mensagem,)
				 


-- ERROR:
File "XXXX", line 6
    print("Entrada: " ,cedula,)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:34:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: ")

print("Entrada: " ,cedula,)
Tartaruga = 2
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca_pintada = 50
Garoupa = 100

if(2):
	mensagem = Tartaruga
	elif(5):
		mensagem = Garca
		elif(10):
			 mensagem = Arara
			 elif(20):
			 	mensagem = Mico-leao-dourado
			 	elif(50):
			 		mensagem = Onca-pintada
			 		elif(100):
			 			mensagem = Garoupa
			 		else:
			 			mensagem = Invalido
				 
print("Animal: " , mensagem,)
				 


-- ERROR:
File "XXXX", line 6
    print("Entrada: " ,cedula,)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:35:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: ")

print("Entrada: " , cedula)
				 
Tartaruga = 2
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca_pintada = 50
Garoupa = 100

if(2):
	mensagem = Tartaruga
	elif(5):
		mensagem = Garca
		elif(10):
			 mensagem = Arara
			 elif(20):
			 	mensagem = Mico-leao-dourado
			 	elif(50):
			 		mensagem = Onca-pintada
			 		elif(100):
			 			mensagem = Garoupa
			 		else:
			 			mensagem = Invalido


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 6
    print("Entrada: " , cedula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:36:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: ")

print("Entrada: " + cedula)
				 
Tartaruga = 2
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca_pintada = 50
Garoupa = 100

if(2):
	mensagem = Tartaruga
	elif(5):
		mensagem = Garca
		elif(10):
			 mensagem = Arara
			 elif(20):
			 	mensagem = Mico-leao-dourado
			 	elif(50):
			 		mensagem = Onca-pintada
			 		elif(100):
			 			mensagem = Garoupa
			 		else:
			 			mensagem = Invalido


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 6
    print("Entrada: " + cedula)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:37:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
Tartaruga = 2
Garca = 5
Arara = 10
Mico_leao_dourado = 20
Onca_pintada = 50
Garoupa = 100

if(2):
	mensagem = Tartaruga
	elif(5):
		mensagem = Garca
		elif(10):
			 mensagem = Arara
			 elif(20):
			 	mensagem = Mico-leao-dourado
			 	elif(50):
			 		mensagem = Onca-pintada
			 		elif(100):
			 			mensagem = Garoupa
			 		else:
			 			mensagem = Invalido


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 17
    elif(5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:39:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
	elif(cedula == 5):
		mensagem = "Garca"
		elif(cedula == 10):
			 mensagem = "Arara"
			 elif(cedula == 20):
			 	mensagem = "Mico-leao-dourado"
			 	elif(cedula == 50):
			 		mensagem = "Onca-pintada"
			 		elif(cedula == 100):
			 			mensagem = "Garoupa"
			 		else:
			 			mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 10
    elif(cedula == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:41:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
	elif(cedula == 5):
		mensagem = "Garca"
		elif(cedula == 10):
			mensagem = "Arara"
			elif(cedula == 20):
				mensagem = "Mico-leao-dourado"
				elif(cedula == 50):
					mensagem = "Onca-pintada"
					elif(cedula == 100):
						mensagem = "Garoupa"
						else:
							mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 10
    elif(cedula == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:41:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
	elif(cedula == 5):
		mensagem = "Garca"
		elif(cedula == 10):
			mensagem = "Arara"
			elif(cedula == 20):
				mensagem = "Mico-leao-dourado"
				elif(cedula == 50):
					mensagem = "Onca-pintada"
					elif(cedula == 100):
						mensagem = "Garoupa"
						else:
							mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 10
    elif(cedula == 5):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:42:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
elif(cedula == 5):
		mensagem = "Garca"
		elif(cedula == 10):
			mensagem = "Arara"
			elif(cedula == 20):
				mensagem = "Mico-leao-dourado"
				elif(cedula == 50):
					mensagem = "Onca-pintada"
					elif(cedula == 100):
						mensagem = "Garoupa"
						else:
							mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 12
    elif(cedula == 10):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:43:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
elif(cedula == 5):
	mensagem = "Garca"
	elif(cedula == 10):
		mensagem = "Arara"
		elif(cedula == 20):
			mensagem = "Mico-leao-dourado"
			elif(cedula == 50):
				mensagem = "Onca-pintada"
				elif(cedula == 100):
					mensagem = "Garoupa"
					else:
						mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 12
    elif(cedula == 10):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:43:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
elif(cedula == 5):
	mensagem = "Garca"
elif(cedula == 10):
		mensagem = "Arara"
		elif(cedula == 20):
			mensagem = "Mico-leao-dourado"
			elif(cedula == 50):
				mensagem = "Onca-pintada"
				elif(cedula == 100):
					mensagem = "Garoupa"
					else:
						mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- ERROR:
File "XXXX", line 14
    elif(cedula == 20):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 21:43:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
elif(cedula == 5):
	mensagem = "Garca"
elif(cedula == 10):
	mensagem = "Arara"
elif(cedula == 20):
	mensagem = "Mico-leao-dourado"
elif(cedula == 50):
	mensagem = "Onca-pintada"
elif(cedula == 100):
	mensagem = "Garoupa"
else:
	mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:44:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
elif(cedula == 5):
	mensagem = "Garca"
elif(cedula == 10):
	mensagem = "Arara"
elif(cedula == 20):
	mensagem = "Mico-leao-dourado"
elif(cedula == 50):
	mensagem = "Onca-pintada"
elif(cedula == 100):
	mensagem = "Garoupa"
else:
	mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:45:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("digite cedula: "))

print("Entrada: ", cedula)
				 
if(cedula == 2):
	mensagem = "Tartaruga"
elif(cedula == 5):
	mensagem = "Garca"
elif(cedula == 10):
	mensagem = "Arara"
elif(cedula == 20):
	mensagem = "Mico-leao-dourado"
elif(cedula == 50):
	mensagem = "Onca-pintada"
elif(cedula == 100):
	mensagem = "Garoupa"
else:
	mensagem = "Invalido"


print("Animal: " , mensagem)
				 


-- EXECUTION TIME:
0.156147
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
